--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	<!-- Scenes -->
 	<script src="js/scenes/Scene_Preloader.js"></script>
 	<script src="js/scenes/Scene_ForestBurn.js"></script>
+	<script src="js/scenes/Scene_IceMelt.js"></script>
 	<script src="js/scenes/Scene_Quote.js"></script>
 	<script src="js/scenes/Scene_Game.js"></script>
 	<script src="js/scenes/Scene_Credits.js"></script>
@@ -81,7 +82,7 @@
 			document.getElementById("warning").style.display = "block";
 		}
 	};
-	window.SHARE_TEXT = 'همین الان یه بازی خیلی خفن رو بازی کردم'
+	window.SHARE_TEXT = "";
 	window.SHARE_URL = "";
 	</script>
 </head>
@@ -89,12 +90,11 @@
 	<div id="stage"></div>
 	<div id="modal_shade"></div>
 	<div class="overlay" id="warning">
-		<div dir="rtl">ای بابا!</div>
+		<div dir="rtl"></div>
 		<div dir="rtl">
 		your browser doesn't support webgl.<br>
 		try a different browser or computer?<br>
 			<br>
-			مرورگر شما مرخص است! از یه مرورگر و یا کامپیوتر دیگه استفاده کنید!
 		</div>
 	</div>
 	<div class="overlay" id="paused">
