temporary start. all fix, not cleaned code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/game.css">
+	
 	<!-- Add favicon to fix 404 error -->
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -35,20 +36,7 @@
 	<script src="js/game/DeadBody.js"></script>
 	<script src="js/game/Blood.js"></script>
 
-	<!-- Peeps -->
-	<script src="js/peeps/NormalPeep.js"></script>
-	<script src="js/peeps/CrazyPeep.js"></script>
-	<script src="js/peeps/NervousPeep.js"></script>
-	<script src="js/peeps/SnobbyPeep.js"></script>
-	<script src="js/peeps/AngryPeep.js"></script>
-	<script src="js/peeps/HatPeep.js"></script>
-	<script src="js/peeps/LoverPeep.js"></script>
-	<script src="js/peeps/ProtestAnim.js"></script>
-	<script src="js/peeps/HelpingAnim.js"></script>
-	<script src="js/peeps/HappyWeirdoPeep.js"></script>
-	<script src="js/peeps/EvilHatPeep.js"></script>
-	<script src="js/peeps/PanicPeep.js"></script>
-	<script src="js/peeps/MurderPeep.js"></script>
+	
 
 	<!-- Misc Crap -->
 	<script src="js/misc/Candlelight.js"></script>
@@ -60,16 +48,13 @@
 	<script src="js/scenes/Scene_Preloader.js"></script>
 	<script src="js/scenes/Scene_ForestBurn.js"></script>
 	<script src="js/scenes/Scene_IceMelt.js"></script>
+	<script src="js/scenes/Scene_Flood.js"></script>
+	<script src="js/scenes/Scene_Quake.js"></script>
+	<script src="js/scenes/Scene_PlasticOcean.js"></script>
 	<script src="js/scenes/Scene_Quote.js"></script>
-	<script src="js/scenes/Scene_Game.js"></script>
 	<script src="js/scenes/Scene_Credits.js"></script>
-	<script src="js/scenes/Scene_Post_Credits.js"></script>
-	<script src="js/scenes/Scene_Post_Post_Credits.js"></script>
 	<script src="js/scenes/Scene_EndPrototype.js"></script>
-	<script src="js/scenes/Act_I.js"></script>
-	<script src="js/scenes/Act_II.js"></script>
-	<script src="js/scenes/Act_III.js"></script>
-	<script src="js/scenes/Scene_Meta.js"></script>
+	
 
 	<!-- Game Scripts -->
 	<script>
@@ -91,17 +76,13 @@
 	<div id="modal_shade"></div>
 	<div class="overlay" id="warning">
 		<div dir="rtl"></div>
-		<div dir="rtl">
-		your browser doesn't support webgl.<br>
-		try a different browser or computer?<br>
-			<br>
-		</div>
 	</div>
 	<div class="overlay" id="paused">
-		<div>paused</div>
+		<div>Click to start</div>
 		<div dir="rtl">
-		click anywhere to resume
+		Web Art Game στο μάθημα Τέχνη Διαδικτύου, Χρήστος Παπαδημητρίου
 		</div>
 	</div>
+	
 </body>
 </html>
