--- a/index.html
+++ b/index.html
@@ -78,10 +78,18 @@
 		<div dir="rtl"></div>
 	</div>
 	<div class="overlay" id="paused">
-		<div>Click to start</div>
-		<div dir="rtl">
-		Web Art Game στο μάθημα Τέχνη Διαδικτύου, Χρήστος Παπαδημητρίου
+		    <div class="container2">
+        <div class="header">
+            <h1>We Melt What We Watch</h1>
+            <p>PRESS TO START</p>
+        </div>
+
+		<div class="footer">
+			<p> - Μια εργασία του Χρήστου Παπαδημητρίου για το μάθημα Τέχνη Διαδικτύου</p>
+			<br>
+			<p>- Background Music: NightLife - Leaderbrain (Instrumental + Slowed)</p>
 		</div>
+        
 	</div>
 	
 </body>
